# swc-plugin

./: .gitignore  .swcrc  Cargo.toml  README.md  package.json
.cargo/: config.toml
.github/workflows/: publish-swc-plugin-canyon.yml
src/: lib.rs
